# ZeroLanCom

./: .clang-format  CHANGELOG.md  CMakeLists.txt  READMD.md  README.md
.github/: copilot-instructions.md
cmake/: zerolancomConfig.cmake.in
conda.recipe/: build.sh  meta.yaml
conda/recipe/: meta.yaml
examples/: CMakeLists.txt  custom_message.cpp  multiple_nodes_example.cpp  publisher_example.cpp  service_example.cpp  subscriber_example.cpp  zerolancom_example.cpp
include/: lancom.hpp  lancom_node.hpp  types.hpp  zerolancom.hpp  zerolancom_node.hpp
include/lancom/: config_hpp.hpp  lancom_hpp.hpp  log_hpp.hpp  types.hpp
include/lancom/nodes/: abstract_node_hpp.hpp  lancom_node_hpp.hpp
include/lancom/sockets/: publisher_hpp.hpp  service_hpp.hpp  service_proxy_hpp.hpp  streamer_hpp.hpp
include/lancom/utils/: node_utils_hpp.hpp
include/nodes/: multicast.hpp  node_info.hpp  node_info_manager.hpp  zerolancom_node.hpp
include/serialization/: binary_codec.hpp  msppack_codec.hpp
include/sockets/: client.hpp  lancom_client.hpp  lancom_publisher.hpp  publisher.hpp  publisher_hpp.hpp  service_manager.hpp  service_proxy.hpp  streamer_hpp.hpp  subscriber_manager.hpp
include/utils/: binary_codec.hpp  logger.hpp  message.hpp  message_utils_hpp.hpp  request_result.hpp  singleton.hpp  zmq_utils.hpp
include/zerolancom/: zerolancom.hpp
include/zerolancom/nodes/: heartbeat_message.hpp  multicast.hpp  node_info.hpp  node_info_manager.hpp  zerolancom_node.hpp
include/zerolancom/serialization/: binary_codec.hpp  msppack_codec.hpp  serializer.hpp
include/zerolancom/sockets/: client.hpp  publisher.hpp  service_manager.hpp  subscriber_manager.hpp
include/zerolancom/utils/: event.hpp  exception.hpp  logger.hpp  message.hpp  periodic_task.hpp  request_result.hpp  singleton.hpp  thread_pool.hpp  zmq_utils.hpp
python/: CMakeLists.txt  lancom_pybind.cpp
scripts/: compile.sh  format.sh
src/: lancom.cpp  log_cpp.cpp  zerolancom.cpp
src/nodes/: heartbeat_message.cpp  multicast.cpp  node_info.cpp  node_info_manager.cpp  zerolancom_node.cpp
src/serialization/: binary_codec.cpp
src/sockets/: client.cpp  service_manager.cpp  subscriber_manager.cpp
src/utils/: logger.cpp
tests/: CMakeLists.txt  test_pubsub.cpp  test_serialization.cpp  test_service.cpp  test_single_node.cpp  test_thread_pool.cpp
tests/include/: test_utils.hpp
